Fikset code smells